--- a/P02-VehiclesAPI/eureka-server/eureka/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/eureka-server/eureka/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=eureka-server 
 server.port=8761
 
+eureka.instance.hostname=localhost
+
 #don't register itself as a client
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
