--- a/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.datasource.url=jdbc:h2:mem:prices
 spring.application.name=pricing-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-instance.preferIpAddress=true
+instance.preferIpAddress=false
 
