--- a/P02-VehiclesAPI/vehicles-api/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/vehicles-api/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+server.port=8080
+
 pricing.endpoint=http://localhost:8082
 maps.endpoint=http://localhost:9191
+pricing.eureka.appname=http://PRICING-SERVICE
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:vehicles
+
+#Eureka
+spring.application.name=vehicles-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+instance.preferIpAddress=true
